--- a/application_log.txt.1
+++ b/application_log.txt.1
@@ -1,122 +1,2 @@
-Mar 22, 2021 11:57:52 PM Dao.JsonDao write
+Mar 23, 2021 2:02:50 PM Dao.CsvDao write
 INFO: Dao.JsonDao writing
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
-Mar 22, 2021 11:57:52 PM Dao.CsvDao readObj
-INFO: Dao.JsonDao reading
