--- a/application_log.txt.1
+++ b/application_log.txt.1
@@ -1,2 +1,4 @@
-Mar 23, 2021 2:02:50 PM Dao.CsvDao write
+May 03, 2021 7:52:22 PM Dao.XmlDao read
+INFO: Dao.JsonDao reading
+May 03, 2021 7:52:32 PM Dao.XmlDao write
 INFO: Dao.JsonDao writing
