--- a/application_log.txt.2
+++ b/application_log.txt.2
@@ -1,4 +1,6 @@
-Mar 23, 2021 2:00:54 PM Dao.CsvDao read
+May 03, 2021 7:51:27 PM Dao.XmlDao read
 INFO: Dao.JsonDao reading
-Mar 23, 2021 2:01:03 PM Dao.CsvDao write
+May 03, 2021 7:51:42 PM Dao.XmlDao write
+INFO: Dao.JsonDao writing
+May 03, 2021 7:51:43 PM Dao.XmlDao write
 INFO: Dao.JsonDao writing
