--- a/application_log.txt.3
+++ b/application_log.txt.3
@@ -1,2 +1,2 @@
-Mar 23, 2021 2:00:33 PM Dao.CsvDao write
-INFO: Dao.JsonDao writing
+May 03, 2021 7:50:26 PM Dao.XmlDao read
+INFO: Dao.JsonDao reading
