--- a/application_log.txt.4
+++ b/application_log.txt.4
@@ -1,4 +1,8 @@
-Mar 22, 2021 11:58:52 PM Dao.JsonDao write
-INFO: Dao.JsonDao writing
-Mar 22, 2021 11:58:52 PM Dao.CsvDao read
+May 03, 2021 7:46:23 PM Dao.JsonDao read
 INFO: Dao.JsonDao reading
+May 03, 2021 7:46:38 PM Dao.JsonDao write
+INFO: Dao.JsonDao writing
+May 03, 2021 7:47:06 PM Dao.JsonDao write
+INFO: Dao.JsonDao writing
+May 03, 2021 7:47:13 PM Dao.JsonDao write
+INFO: Dao.JsonDao writing
