--- a/application_log.txt.2
+++ b/application_log.txt.2
@@ -1,6 +1,2 @@
-May 03, 2021 7:51:27 PM Dao.XmlDao read
+May 17, 2021 10:39:18 PM Dao.CsvDao read
 INFO: Dao.JsonDao reading
-May 03, 2021 7:51:42 PM Dao.XmlDao write
-INFO: Dao.JsonDao writing
-May 03, 2021 7:51:43 PM Dao.XmlDao write
-INFO: Dao.JsonDao writing
