--- a/application_log.txt.4
+++ b/application_log.txt.4
@@ -1,8 +1,2 @@
-May 03, 2021 7:46:23 PM Dao.JsonDao read
+May 17, 2021 10:33:30 PM Dao.CsvDao read
 INFO: Dao.JsonDao reading
-May 03, 2021 7:46:38 PM Dao.JsonDao write
-INFO: Dao.JsonDao writing
-May 03, 2021 7:47:06 PM Dao.JsonDao write
-INFO: Dao.JsonDao writing
-May 03, 2021 7:47:13 PM Dao.JsonDao write
-INFO: Dao.JsonDao writing
